# Column-Generation-VRP-with-Custom-Labeling-Algorithm

./: CMakeLists.txt  FindGUROBI.cmake  FindGurobi.cmake  LICENSE  README.md  vcpkg.json
Builded application(exe)/: log_algorithm5.txt
Prebuilt application(exe) and logs/: log_algorithm3.txt  log_algorithm4.txt  log_algorithm6.txt  log_algorithm7.txt
Prebuilt application(exe) and logs/linux/: cg
src/: ElementaryLabel.cpp  ElementaryLabel.h  Graph.cpp  Graph.h  Route.cpp  Route.h  ShortestPath.cpp  ShortestPath.h  Solver.cpp  Solver.h  Solver_2.cpp  Solver_3.cpp  main.cpp
